add wssh + add username to devices + change config.repo_address + installer script + start script

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -91,6 +91,7 @@ es:
   new_device: 'Nuevo dispositivo'
   device: 'Dispositivo'
   sending_commands: 'Enviando comandos a través de'
+  username: 'Usuario'
 
 
   #help
